# allocation-catcher

./: Cargo.toml
allocation-catcher-backend/: Cargo.toml
allocation-catcher-backend/src/: allocations_storage.rs
allocation-catcher-backend/src/detour/: rtl_heap_detour.rs
allocation-catcher-backend/src/platform/windows/: mod.rs
allocation-catcher-dylib/: Cargo.toml
allocation-catcher-dylib/src/platform/windows/: mod.rs
backend/: Cargo.toml  build.rs
backend-dylib/: Cargo.toml
backend-dylib/src/: lib.rs
backend-dylib/src/platform/: mod.rs
backend-dylib/src/platform/windows/: panic.rs
backend-server/: Cargo.toml
backend-server/src/: lib.rs
backend-server/src/server/: mod.rs  transport.rs
backend/src/: allocation_handler.rs  allocations_storage.rs  debug.rs  dllmain.rs  handler.rs  ipc.rs  lib.rs  proto.rs  server.rs  state.rs  storage.rs
backend/src/detour/: flag.rs  mod.rs  rtl_heap_detour.rs
backend/src/platform/: mod.rs  windows.rs
backend/src/platform/windows/: debug.rs  entry.rs  mod.rs  panic.rs  tls.rs
backend/src/server/: ipc.rs  mod.rs  transport.rs
backend/src/server/transport/: ipc.rs  mod.rs  stream.rs  tcp.rs
backtrace/: Cargo.toml
backtrace/src/: dbghelp.rs
common/: Cargo.toml  build.rs  packet_id.rs
common/proto/: messages.proto
common/src/: lib.rs
dylib/: Cargo.toml
dylib/src/platform/: mod.rs
dylib/src/platform/windows/: entry.rs
frontend/: Cargo.toml  build.rs
frontend/.cargo/: config.toml
frontend/src/: client.rs  ipc.rs  main.rs  transport.rs
