[workspace]
members = ["backend", "backend-server", "backend-dylib", "frontend", "common", "backtrace"]
resolver = "2"

[workspace.dependencies]
num_enum = "0.7.1"
prost = "0.12.2"
anyhow = "1.0.75"
bytes = "1.5.0"
static_cell = { version = "2.0.0", features = ["nightly"] }

common = { path = "./common" }
