[package]
name = "allocation-catcher-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8.0"
lazy_static = "1.4.0"
retour = { version = "0.3.1", features = ["nightly", "static-detour"] }
static_cell = { version = "2.0.0", features = ["nightly"] }
winapi = { version = "0.3.9", features = [
    "winuser",
    "libloaderapi",
    "synchapi",
    "winbase",
    "heapapi",
    "debugapi",
] }

bytes = { workspace = true }
common = { workspace = true }
num_enum = { workspace = true }
prost = { workspace = true }
backtrace = "0.3.69"
