[package]
name = "allocation-catcher-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8.0"
lazy_static = "1.4.0"
retour = "0.3.1"
winapi = { version = "0.3.9", features = [
    "winuser",
    "libloaderapi",
    "synchapi",
    "winbase",
    "heapapi",
    "debugapi",
] }

backtrace = { version = "0.3.69", path = "../backtrace" }
static_cell = { workspace = true }

common = { workspace = true }
